Fix alignment and styles

--- a/assets/scss/molecules/_jumbotron.scss
+++ b/assets/scss/molecules/_jumbotron.scss
@@ -9,7 +9,7 @@
   padding: 240px 0 0 0;
   margin: 0;
   min-height: 650px;
-  //background: transparent;
+  z-index: 1;
   border-bottom: 5px solid $red-line-colour;
 
   //@media (min-width: $screen-sm-max) {
